<resources>
    <string name="app_name">Cod Calculator</string>
    <string name="email">Correo electrónico</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="password2">Repite contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="createaccount">Crear cuenta</string>
    <string name="createaccount2">CREAR CUENTA</string>
    <string name="create_account">¿No tienes cuenta?</string>
    <string name="login_account">¿Ya tienes cuenta?</string>
    <string name="language">Idioma</string>
    <string name="language2">Selecciona el idioma</string>
    <string name="language_spanish">Español</string>
    <string name="language_english">Inglés</string>
    <string name="language_french">Francés</string>
    <string name="language_russian">Ruso</string>
    <string name="language_portuguese">Portugués</string>
    <string name="language_turkish">Turco</string>
    <string name="reset_pass">RESTABLECER CONTRASEÑA</string>
    <string name="emptyFields">Este campo es obligatorio</string>
    <string name="invalidEmail">Introduce un correo válido</string>
    <string name="mailNotFound">El email introducido no está registrado</string>
    <string name="sentEmail">Email enviado</string>
    <string name="exit">¿Deseas salir de la aplicación?</string>
    <string name="volver">Volver</string>
    <string name="yes">Si</string>
    <string name="no">No</string>

    <!--AUTO GENERADO CON EL DRAWER-->
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_resources">Recursos</string>
    <string name="menu_speedups">Aceleradores</string>
    <string name="menu_honor">Honor</string>
    <string name="menu_tokens">Tokens</string>

    <string name="rss_tab_gold">Oro</string>
    <string name="rss_tab_wood">Madera</string>
    <string name="rss_tab_stone">Piedra</string>
    <string name="rss_tab_mana">Maná</string>

    <string name="image_label">Añade tu captura del inventario</string>
    <string name="_500">500</string>
    <string name="_750">750</string>
    <string name="_1k">1k</string>
    <string name="_3k">3k</string>
    <string name="_7_5k">7.5k</string>
    <string name="_10k">10k</string>
    <string name="_15k">15k</string>
    <string name="_37_5k">37.5k</string>
    <string name="_50k">50k</string>
    <string name="_112_5k">112.5k</string>
    <string name="_150k">150k</string>
    <string name="_200k">200k</string>
    <string name="_375k">375k</string>
    <string name="_500k">500k</string>
    <string name="_600k">600k</string>
    <string name="_1_125m">1.125M</string>
    <string name="_1_5m">1.5M</string>
    <string name="_2m">2M</string>
    <string name="_3_75m">3.75M</string>
    <string name="_5m">5M</string>

    <string name="speedups_building">Construcción</string>
    <string name="speedups_training">Entrenamiento</string>
    <string name="speedups_research">Investigación</string>
    <string name="speedups_universal">Universal</string>

    <string name="_1_min">1 min</string>
    <string name="_5_min">5 min</string>
    <string name="_10_min">10 min</string>
    <string name="_15_min">15 min</string>
    <string name="_30_min">30 min</string>
    <string name="_60_min">60 min</string>
    <string name="_3_hours">3 horas</string>
    <string name="_8_hours">8 horas</string>
    <string name="_15_hours">15 horas</string>
    <string name="_24_hours">24 horas</string>
    <string name="_3_days">3 días</string>
    <string name="_7_days">7 días</string>
    <string name="_30_days">30 días</string>

    <plurals name="day">
        <item quantity="one">día</item>
        <item quantity="other">días</item>
    </plurals>

    <plurals name="hour">
        <item quantity="one">hora</item>
        <item quantity="other">horas</item>
    </plurals>

    <plurals name="minute">
        <item quantity="one">minuto</item>
        <item quantity="other">minutos</item>
    </plurals>

    <string name="time_format_days_only">%s %s</string>
    <string name="time_format_days_and_minutes">%s %s y %s %s</string>
    <string name="time_format_days_hours_and_minutes">%s %s, %s %s y %s %s</string>
    <string name="time_format_hours_only">%s %s</string>
    <string name="time_format_hours_and_minutes">%s %s y %s %s</string>
    <string name="time_format_minutes_only">%s %s</string>

    <string name="honor_inventory"> Inventario</string>
    <string name="honor_fromto"> Niveles</string>

    <!-- Google account -->
    <string name="googleLoginError">Fallo al iniciar sesión con Google</string>
    <string name="googleLoginSuccess">Inicio de sesión con Google correcto</string>

    <!-- Signout -->
    <string name="signout">Cerrar Sesión</string>
    <string name="signout_confirm">¿Está seguro que desea cerrar sesión?</string>
    <string name="closedSession">Sesión cerrada</string>

    <!-- About us -->
    <string name="faq">FAQ</string>
    <string name="faq2">Sobre Nosotros</string>
    <string name="faq3">Esta aplicación ha sido realizada por braveras y davvnovvo para el proyecto final de nuestro grado</string>
    <string name="faq4">GitHubs</string>
    <string name="faq5">davvnovvo\nBraveras</string>
    <string name="faq6">Dudas</string>
    <string name="faq7">Si tienes alguna duda contacta con nosotros en discord: Braveras#7789</string>

    <!-- Crete User -->
    <string name="passwordsDoNotMatch">Las contraseñas no coinciden</string>
    <string name="error_password_length">6 caracteres</string>
    <string name="error_password_digit">1 número</string>
    <string name="error_password_uppercase">1 mayúscula</string>
    <string name="error_password_special">1 caracter especial</string>
    <string name="error_password_header">La contraseña no cumple los requisitos:</string>
    <string name="newUserSuccess">Correo de verificación enviado</string>
    <string name="newUserFail">Error al crear usuario</string>
    <string name="emailUsed">Este email ya ha sido utilizado</string>

    <!-- Login User -->
    <string name="loginSuccess">Inicio de sesión correcto</string>
    <string name="mailNotVerified">El email no ha sido verificado</string>
    <string name="wrongPassword">Contraseña o email incorrectos</string>
    <string name="userNotFound">Usuario no registrado</string>
    <string name="loginError">Error al iniciar sesión</string>

    <!--Guest User-->
    <string name="guestError">Error en el inicio de sesión anónimo</string>
    <string name="guestUser">Invitado</string>

    <!-- BackPressed -->
    <string name="press_to_exit">Pulsa de nuevo para salir</string>

    <!-- Password Requirements -->
    <string name="password_requirements">Requisitos de contraseña</string>
    <string name="password_length">- Al menos 6 caracteres</string>
    <string name="password_uppercase">- Al menos 1 mayúscula</string>
    <string name="password_number">- Al menos 1 número</string>
    <string name="password_special_char">- Al menos 1 carácter especial</string>

    <!-- Honor items -->
    <string name="honor_5">5</string>
    <string name="honor_10">10</string>
    <string name="honor_20">20</string>
    <string name="honor_50">50</string>
    <string name="honor_100">100</string>
    <string name="honor_200">200</string>
    <string name="honor_500">500</string>
    <string name="honor_1000">1000</string>
    <string name="honor_2000">2000</string>
    <string name="honor_5000">5000</string>
    <string name="honor_level_prompt">Nivel objetivo</string>
    <string name="honor_points">Puntos de honor</string>
    <string name="honor_points_empty">Introduce tus puntos de honor actuales</string>
    <string name="honor_points_wrong_level">Ya has alcanzado el nivel objetivo</string>
    <string name="honor_level_prompt_error">Selecciona un nivel objetivo válido</string>
    <string name="honor_help_info">Aquí puedes calcular los puntos de honor que vas a necesitar para subir a culquier nivel. Introduce los puntos de honor que tengas actualmente y el nivel objetivo.</string>

    <!--Tokens -->
    <string-array name="token_type">
        <item>Élite</item>
        <item>Épico</item>
        <item>Legendario</item>
    </string-array>
    <string name="hero_tier">Rango del héroe:</string>
    <string name="tokens_from">De:</string>
    <string name="tokens_to">Hasta:</string>
    <string name="tokens_help_info">Aquí puedes calcular los tokens que vas a necesitar para subir las habilidades de cualquier tipo héroe.\nSelecciona el nivel actual, y el nivel al que quieres llegar.</string>
    <string name="popup_help_title">Ayuda</string>

</resources>