<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_resources"
            android:icon="@drawable/ic_mana_bottle"
            android:title="@string/menu_resources" />
        <item
            android:id="@+id/nav_speedups"
            android:icon="@drawable/speedups_general"
            android:title="@string/menu_speedups" />
        <item
            android:id="@+id/nav_honor"
            android:icon="@drawable/honor_general"
            android:title="@string/menu_honor" />
        <item
            android:id="@+id/nav_tokens"
            android:icon="@drawable/ic_token"
            android:title="@string/menu_tokens" />
    </group>
</menu>